k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
      - name: nextjs
        image: local/nextjs-postgres-redis:dev
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /api/healthz
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
