k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs
  namespace: demo
spec:
  selector:
    app: nextjs
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
